--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon
 locale: "es-ES"
 title: "Santiago López Begines"
 title_separator: "|"
-subtitle: "Data Scientist Portfolio"
+subtitle: "Biomedical Data Scientist"
 name: "Santiago López Begines"
 description: "Neuroscientist turned Data Scientist | Machine Learning & Financial Modeling"
 url: "https://SLopezBegines.github.io"
