Update Google Analytics ID in config file

--- a/_config.yml
+++ b/_config.yml
@@ -71,4 +71,4 @@ navigation:
     url: /#contact
 
 # Google Analytics (opcional - añade tu ID aquí)
-google_analytics: G-1NTD08CXTS
+google_analytics: G-8C3HQ7CE3V
